# cgen

./: Cargo.toml  README.md  a.out  bench.c  cbindgen.toml  cgen.h  make  proc  test.c
include/: cgen.h
src/: lib.rs
test/: smoke.rs
